# platform2d

./: CMakeLists.txt  LICENSE  README.md
Tiled/world test/: world_test-project.tiled-session  world_test.json  world_test.tiled-session  world_test.tmx
src/: enemy.c  enemy.h  main.c  map.c  map.h  platform.c  platform.h  player.c  player.h
